<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_toolbar_more_options"
        android:title="@null"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_call"
                android:icon="@drawable/baseline_call_24"
                android:title="@string/action_call"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_video_call"
                android:icon="@drawable/baseline_videocam_24"
                android:title="@string/action_video_call"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/action_info"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/action_info"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>