<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/outline_save_24"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_group_option"
        android:icon="@drawable/ic_toolbar_more_options"
        android:title="@null"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_leave_group"
                android:icon="@drawable/ic_leave_24"
                android:title="@string/action_leave_group"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_archive_group"
                android:icon="@drawable/ic_archive_24"
                android:title="@string/action_archive_group"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>