<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/StandardTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_group_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/StandardTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_group_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtGroupDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                style="@style/StandardButtonStyle.Outline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingVertical="@dimen/margin_medium"
                android:text="@string/action_create_group" />
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>